# information_retrieval_system_ORF_science

./: .gitignore  README.md  main.py  pyproject.toml  run_bot.sh  run_retrieval.sh
prompt/: prompt_abbrev_time.txt
prompts/: qa_prompt.txt  query_prompt.txt
scripts/: download_data.py  probe.py
src/: article.py  config.py  db_handler.py  fetcher.py  file_utilities.py  knowledge_graph.py  main.py  models.py  query_handler.py  query_utils.py  retrieval_system.py  signal_connector.py
src/data/processed/: last_update.txt
